# jfc

./: .gitignore  CLAUDE.md  README.md  build_spec.py  conventions.md  methodology.md  orchestration.md  pyproject.toml  scaffold_analysis.py
.claude/: settings.json
.claude/hooks/: isolate.sh
conventions/: unfolding.md
docs/plans/: refactor-plan.md  spec-audit-2026-03-25.md
methodology/: 01-principles.md  02-inputs.md  03-phases.md  04-blinding.md  05-artifacts.md  06-review.md  07-tools.md  08-context.md  09-multichannel.md  11-coding.md  12-downscoping.md  appendix-checklist.md  appendix-dependencies.md  appendix-heuristics.md  appendix-plotting.md
orchestration/: agents.md  automation.md  integration.md  regression.md  reviews.md  sessions.md
orchestrator/: __init__.py  artifacts.py  config.py  example_config.yaml  main.py  names.py  pipeline.py  prompts.py  review.py  sessions.py
prompts/: README.md  colour_factors.md  eec_correlators.md  lund_jet_plane.md  rb_rc.md  zlineshape_alphas.md
src/: scaffold_analysis.py
src/agents/: README.md  arbiter.md  bibtex_validator.md  constructive_reviewer.md  critical_reviewer.md  executor.md  fixer.md  investigator.md  note_writer.md  physics_reviewer.md  plot_validator.md  rendering_reviewer.md  typesetter.md
src/conventions/: README.md  extraction.md  lint_plots.py  postprocess_tex.py  preamble.tex  search.md  unfolding.md
src/methodology/: 01-principles.md  02-inputs.md  03-phases.md  03a-orchestration.md  04-blinding.md  05-artifacts.md  06-review.md  07-tools.md  08-context.md  09-multichannel.md  10-scaling.md  11-coding.md  12-downscoping.md  README.md  analysis-note.md  appendix-automation.md  appendix-checklist.md  appendix-heuristics.md  appendix-integration.md  appendix-plotting.md  appendix-prompts.md  appendix-sessions.md
src/orchestration/: agents.md  automation.md  integration.md  reviews.md  sessions.md
src/templates/: phase1_claude.md  phase2_claude.md  phase3_claude.md  phase4_claude.md  phase5_claude.md  pixi.toml  root_claude.md
templates/: build_pdf.py  pixi.toml
test_run/: prompt.md
thrust_alphas/: CLAUDE.md  experiment_log.md  pixi.toml  retrieval_log.md
thrust_alphas/phase1_strategy/: CLAUDE.md
thrust_alphas/phase2_exploration/: CLAUDE.md
(+73 files in other folders)
