[project]
name = "slopspec"
version = "0.1.0"
description = "slopspec — LLM-driven HEP analysis orchestrator."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.pypi-dependencies]
pyyaml = ">=6.0"
rich = ">=13.0"

[tool.pixi.tasks]
build = "python build_spec.py"
scaffold = "python scaffold_analysis.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "T201"]
